--- a/index.html
+++ b/index.html
@@ -6,38 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Document</title>
+    <script src="index.js"></script>
 </head>
 <body>
         <h1 align="center">Calculator</h1>
             <table border="1">
                 <tr>
-                   <td colspan="5"><input type="text" id="result"></td>
+                   <td colspan="5"><input type="text" id="result" name="result"></td>
                 </tr>
                 <tr>
-                    <td><input type="button" value="7"></td>
-                    <td><input type="button" value="8"></td>
-                    <td><input type="button" value="9"></td>
-                    <td><input type="button" value="/"></td>
-                    <td><input type="button" value="<--"></td>
+                    <td><input type="button" value="7" onclick="display('7')" class="btn"></td>
+                    <td><input type="button" value="8" onclick="display('8')" class="btn"></td>
+                    <td><input type="button" value="9" onclick="display('9')" class="btn"></td>
+                    <td><input type="button" value="/" onclick="display('/')" class="btn"></td>
+                    <td><input type="button" value="<--" onclick="deletion()" class="btn"></td>
                 </tr>
                 <tr>
-                    <td><input type="button" value="4"></td>
-                    <td><input type="button" value="5"></td>
-                    <td><input type="button" value="6"></td>
-                    <td><input type="button" value="*"></td>
-                    <td><input type="button" value="C"></td>
+                    <td><input type="button" value="4" onclick="display('4')" class="btn"></td>
+                    <td><input type="button" value="5" onclick="display('5')" class="btn"></td>
+                    <td><input type="button" value="6" onclick="display('6')" class="btn"></td>
+                    <td><input type="button" value="*" onclick="display('*')" class="btn"></td>
+                    <td><input type="button" value="C" onclick="reset()" class="btn"></td>
                 </tr>
                 <tr>
-                    <td><input type="button" value="1"></td>
-                    <td><input type="button" value="2"></td>
-                    <td><input type="button" value="3"></td>
-                    <td><input type="button" value="+"></td>
-                    <td rowspan="2"><input type="button" value="="></td>
+                    <td><input type="button" value="1" onclick="display('1')" class="btn"></td>
+                    <td><input type="button" value="2" onclick="display('2')" class="btn"></td>
+                    <td><input type="button" value="3" onclick="display('3')" class="btn"></td>
+                    <td><input type="button" value="+" onclick="display('+')" class="btn"></td>
+                    <td rowspan="2"><input type="button" value="=" onclick="calculate()" class="btn" id="eq"></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><input type="button" value="0"></td>
-                    <td><input type="button" value="."></td>
-                    <td><input type="button" value="-"></td>
+                    <td colspan="2"><input type="button" value="0" onclick="display('0')" class="btn" id="zero"></td>
+                    <td><input type="button" value="." onclick="display('.')" class="btn"></td>
+                    <td><input type="button" value="-" onclick="display('-')" class="btn"></td>
                 </tr>
             </table>
 </body>
